--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Kevin Mayo :: kevin-mayo.com</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="../bower_components/platform/platform.js"></script>
+    <script src="bower_components/platform/platform.js"></script>
     <script src="//cdn.polyfill.io/v1/polyfill.min.js"></script>
      <!-- <link rel="import" href="../bower_components/core-pages/core-pages.html"> -->
     <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
