--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <title>Kevin Mayo :: kevin-mayo.com</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="../bower_components/platform/platform.js"></script>
+    <script src="bower_components/platform/platform.js"></script>
     <script src="//cdn.polyfill.io/v1/polyfill.min.js"></script>
      <!-- <link rel="import" href="../bower_components/core-pages/core-pages.html"> -->
-    <link rel="import" href="../bower_components/core-toolbar/core-toolbar.html">
-    <link rel="import" href="../bower_components/core-scaffold/core-scaffold.html">
-    <link rel="import" href="../bower_components/core-header-panel/core-header-panel.html">
-    <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-    <link rel="import" href="../bower_components/core-menu/core-menu.html">
-    <link rel="import" href="../bower_components/core-item/core-item.html">
-    <link rel="import" href="../bower_components/flatiron-director/flatiron-director.html">
-    <link rel="import" href="../bower_components/paper-shadow/paper-shadow.html">
-    <link rel="import" href="../bower_components/paper-item/paper-item.html">
-    <link rel="import" href="../bower_components/core-animated-pages/core-animated-pages.html">
-    <link rel="import" href="../bower_components/core-ajax/core-ajax.html">
+    <link rel="import" href="bower_components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="bower_components/core-scaffold/core-scaffold.html">
+    <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
+    <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
+    <link rel="import" href="bower_components/core-menu/core-menu.html">
+    <link rel="import" href="bower_components/core-item/core-item.html">
+    <link rel="import" href="bower_components/flatiron-director/flatiron-director.html">
+    <link rel="import" href="bower_components/paper-shadow/paper-shadow.html">
+    <link rel="import" href="bower_components/paper-item/paper-item.html">
+    <link rel="import" href="bower_components/core-animated-pages/core-animated-pages.html">
+    <link rel="import" href="bower_components/core-ajax/core-ajax.html">
     <link rel="stylesheet" href="css/kmayo.css" shim-shadowdom>
 
 </head>
