--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <span><span class="initial">K</span>evin 
           <span class="initial">M</span>ayo</span>
         </core-toolbar>
-        <core-menu valueattr="hash" selected="{{route}}" selectedMode="{{selectedPage}}"
+        <core-menu valueattr="hash" selected="{{route}}" selectedModel="{{selectedPage}}"
                    on-core-select="{{menuItemSelected}}" on-click="{{ajaxLoad}}">
-          <template repeat="{{page in pages}}">
+          <template repeat="{{page, i in pages}}">
             <paper-item icon="{{page.icon}}" label="{{page.name}}" hash="{{page.hash}}">
               <a href="{{page.url}}"></a>
             </paper-item>
@@ -47,11 +47,11 @@
         <core-icon-button icon="favorite" class="favorite" alt="add to favorites"></core-icon-button>
       </core-toolbar>
 
-      <div layout horizontal center-center fit>
+      <div layout horizontal fit>
         <core-animated-pages id="pages" valueattr="hash" selected="{{route}}" transitions="cross-fade-all">
-          <template repeat="{{page in pages}}">
-            <sectino hash="{{page.hash}}" layout vertical center-center>
-              <div>Loading...</div>
+          <template repeat="{{page, i in pages}}">
+            <sectino hash="{{page.hash}}" layout vertical>
+              <div>Coming soon</div>
             </section>
           </template>
         </core-animated-pages>
