trial custom web component

--- a/about.html
+++ b/about.html
@@ -4,12 +4,16 @@
   <title>Kevin Mayo :: kevin-mayo.com</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="import" href="info-card.html">
   </title>
 </head>
 <body>
   <article class="article">
-    This is all about me
+    <info-card>
+    	<img width="60" height="60">
+    	<h2>Kevin Mayo</h2>
+    	<p>Web Developer<br>LinkedIn, GitHub, etc.</p>
+    </info-card>
   </article>
 </body>
 </html>
