--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div layout horizontal fit>
         <core-animated-pages id="pages" valueattr="hash" selected="{{route}}" transitions="cross-fade-all">
           <template repeat="{{page, i in pages}}">
-            <sectino hash="{{page.hash}}" layout vertical>
+            <section hash="{{page.hash}}" layout vertical>
               <div>Coming soon</div>
             </section>
           </template>
