--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
   <article class="article">
     <info-card>
-    	<img width="60" height="60">
+    	<img width="60" height="60" src="../img/kevin.jpg">
     	<h2>Kevin Mayo</h2>
     	<p>Web Developer<br>LinkedIn, GitHub, etc.</p>
     </info-card>
