custom element nearly done

--- a/about.html
+++ b/about.html
@@ -4,15 +4,19 @@
   <title>Kevin Mayo :: kevin-mayo.com</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="import" href="info-card.html">
   </title>
 </head>
 <body>
   <article class="article">
     <info-card>
-    	<img width="60" height="60" src="../img/kevin.jpg">
+    	<img width="90" height="97" class="profile" src="../img/kevin.jpg">
     	<h2>Kevin Mayo</h2>
-    	<p>Web Developer<br>LinkedIn, GitHub, etc.</p>
+    	<h3>Web Developer</h3>
+      <h4>
+        <a href="https://github.com/kevdonk/"><img src="../img/github.png" width="48px" height="48px"></a>
+        <a href="https://www.linkedin.com/in/kevindmayo"><img src="../img/linkedin.png" width="48px" height="48px"></a>
+        <a href="https://twitter.com/notkevdonk"><img src="../img/twitter.png" width="48px" height="48px"></a>
+      </h4>
     </info-card>
   </article>
 </body>
